--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>ICSTC Form</h1>
+    <form class="file-form">
+        <input type="file" class="csv-file" id="csvFile" accept=".csv" />
+        <input type="submit" value="Submit">
+    </form>
     <form action="POST">
         <table>
             <tr>
@@ -18,7 +22,13 @@
             </tr>
             <tr>
                 <td>1</td>
-                <td><input type="text"></td>
+                <td>
+                    <!-- <select>
+                        <option value="asdf">asdf</option>
+                        <option value="qwer">qwer</option>
+                        <option value="zxcv">zxcv</option>
+                    </select> -->
+                </td>
                 <td><input type="text"></td>
                 <td><input type="text"></td>
             </tr>
@@ -26,3 +36,55 @@
     </form>
 </body>
 </html>
+
+<script>
+    const fileForm = document.querySelector('.file-form');
+    const csvFile = document.querySelector('.csv-file');
+
+    const csvToArray = (str, delimiter = ',') => {
+        const headers = str.slice(0, str.indexOf('\n')).split(delimiter);
+        const rows = str.slice(str.indexOf('\n') + 1).split('\n');
+
+        const arr = rows.map(function (row) {
+            const values = row.split(delimiter);
+            const el = headers.reduce(function (object, header, index) {
+                object[header] = values[index];
+                return object;
+            }, {});
+            return el;
+        });
+
+        return arr;
+    }
+
+    const populateDriversToTable = (data) => {
+        const playerField = document.querySelectorAll('td:nth-child(2)');
+        playerField.forEach(playerField => {
+            let select = document.createElement('select');
+
+            data.forEach(item => {
+                let option = document.createElement('option');
+                option.value = item.driver;
+                option.innerHTML = item.driver;
+
+                select.appendChild(option);
+            });
+
+            playerField.appendChild(select);
+        })
+    }
+
+    fileForm.addEventListener('submit', (e) => {
+        e.preventDefault();
+        const input = csvFile.files[0];
+        const reader = new FileReader();
+
+        reader.onload = function (event) {
+            const text = event.target.result;
+            const data = csvToArray(text);
+            populateDriversToTable(data);
+        }
+
+        reader.readAsText(input);
+    });
+</script>
